Add a link to the repository

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</p>
 		<canvas id="noisy" width="200" height="200" onclick="generate()" style="display:none"></canvas>
 		<p>
-			Written by <a href="https://robson.plus">Robson</a>. <a href="">View the code</a>.
+			Written by <a href="https://robson.plus">Robson</a>. <a href="https://github.com/Robson/White-Noise-Image-Generator">View the code</a>.
 		</p>		
 		<script>
 
