Add a bias option (dark, none, light)

--- a/index.html
+++ b/index.html
@@ -54,12 +54,20 @@
 				<option value="red">Red</option>
 				<option value="green">Green</option>
 				<option value="blue">Blue</option>
-				<option disabled>----------------</option>
-				<option value="light">Light</option>
-				<option value="dark">Dark</option>
+				<!--
 				<option disabled>----------------</option>
 				<option value="space_greyscale">Space (Greyscale)</option>
 				<option value="space_all">Space (All Colours)</option>				
+				-->
+			</select>
+			<br />
+			Bias:
+			<select id="bias">
+				<option value="verylight">Very Light</option>
+				<option value="light">Light</option>
+				<option value="none" selected>None</option>
+				<option value="dark">Dark</option>
+				<option value="verydark">Very Dark</option>
 			</select>
 		</p>
 		<p>
