Change hyphen type

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 			<select id="colours">
 				<option value="monochrome">Monochrome</option>
 				<option value="greyscale">Greyscale</option>
-				<option disabled>----------------</option>
+				<option disabled>――――――</option>
 				<option value="rgb_3bit">RGB 3-Bit</option>
 				<option value="rgb_6bit" selected>RGB 6-Bit</option>
 				<option value="rgb_12bit">RGB 12-Bit (Websafe)</option>				
 				<option value="rgb_24bit">RGB 24-Bit (Truecolour)</option>
-				<option disabled>----------------</option>
+				<option disabled>――――――</option>
 				<option value="red">Red</option>
 				<option value="green">Green</option>
 				<option value="blue">Blue</option>
 				<!--
-				<option disabled>----------------</option>
+				<option disabled>――――――</option>
 				<option value="space_greyscale">Space (Greyscale)</option>
 				<option value="space_all">Space (All Colours)</option>				
 				-->
@@ -75,7 +75,7 @@
 			<input type="button" id="generate" value="Generate" onclick="generate()" />
 		</p>
 		<canvas id="noisy"></canvas>
-		<img id="output" alt="White Noise" />
+		<img id="output" alt="White Noise" src="blank.png" />
 		<p>
 			Written by <a href="https://robson.plus">Robson</a>. <a href="https://github.com/Robson/White-Noise-Image-Generator">View the code</a>.
 		</p>		
