Remove trailing slashes

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 		</p>
 		<p>
 			Amount of squares horizontally:
-			<input type="number" id="lengthH" min="1" value="50" onkeyup="stats()" onchange="stats()" />
+			<input type="number" id="lengthH" min="1" value="50" onkeyup="stats()" onchange="stats()">
 			<br>
 			Amount of squares vertically:
-			<input type="number" id="lengthV" min="1" value="25" onkeyup="stats()" onchange="stats()" />
+			<input type="number" id="lengthV" min="1" value="25" onkeyup="stats()" onchange="stats()">
 			<br>
 			Size of squares:
-			<input type="number" id="size" min="1" value="5" onkeyup="stats()" onchange="stats()" />
+			<input type="number" id="size" min="1" value="5" onkeyup="stats()" onchange="stats()">
 			<br>
 			Colours:
 			<select id="colours">
@@ -72,10 +72,10 @@
 		</p>
 		<p>
 			<span id="warning" style="display:none;">Warning: this is massive and may freeze/crash your browser!<br></span>
-			<input type="button" id="generate" value="Generate" onclick="generate()" />
+			<input type="button" id="generate" value="Generate" onclick="generate()">
 		</p>
 		<canvas id="noisy"></canvas>
-		<img id="output" alt="White Noise" src="blank.png" />
+		<img id="output" alt="White Noise" src="blank.png">
 		<p>
 			Written by <a href="https://robson.plus">Robson</a>. <a href="https://github.com/Robson/White-Noise-Image-Generator">View the code</a>.
 		</p>
