Unified the "about" message with other repositories

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<canvas id="noisy"></canvas>
 		<img id="output" alt="White Noise" src="blank.png">
 		<p>
-			Written by <a href="https://robson.plus">Robson</a>. <a href="https://github.com/Robson/White-Noise-Image-Generator">View the code</a>.
+			<a href="https://github.com/Robson/White-Noise-Image-Generator">Code</a> by <a href="https://robson.plus">Robson</a>.
 		</p>
 		<script src="page.js"></script>
 	</body>
