--- a/index.html
+++ b/index.html
@@ -32,43 +32,56 @@
 			This tool allows you to generate images that simulate white noise.
 		</p>
 		<p>
-			Amount of squares horizontally:
-			<input type="number" id="lengthH" min="1" value="50" onkeyup="stats()" onchange="stats()">
-			<br>
-			Amount of squares vertically:
-			<input type="number" id="lengthV" min="1" value="25" onkeyup="stats()" onchange="stats()">
-			<br>
-			Size of squares:
-			<input type="number" id="size" min="1" value="5" onkeyup="stats()" onchange="stats()">
-			<br>
-			Colours:
-			<select id="colours">
-				<option value="monochrome">Monochrome</option>
-				<option value="greyscale">Greyscale</option>
-				<option disabled>――――――</option>
-				<option value="rgb_3bit">RGB 3-Bit</option>
-				<option value="rgb_6bit" selected>RGB 6-Bit</option>
-				<option value="rgb_12bit">RGB 12-Bit (Websafe)</option>
-				<option value="rgb_24bit">RGB 24-Bit (Truecolour)</option>
-				<option disabled>――――――</option>
-				<option value="red">Red</option>
-				<option value="green">Green</option>
-				<option value="blue">Blue</option>
-				<!--
-				<option disabled>――――――</option>
-				<option value="space_greyscale">Space (Greyscale)</option>
-				<option value="space_all">Space (All Colours)</option>
-				-->
-			</select>
-			<br>
-			Bias:
-			<select id="bias">
-				<option value="verylight">Very Light</option>
-				<option value="light">Light</option>
-				<option value="none" selected>None</option>
-				<option value="dark">Dark</option>
-				<option value="verydark">Very Dark</option>
-			</select>
+			<table>
+				<tr>
+					<th>Columns:</th>
+					<td><input type="number" id="lengthH" min="1" value="50" onkeyup="stats()" onchange="stats()"></td>
+				</tr>
+				<tr>
+					<th>Rows:</th>
+					<td><input type="number" id="lengthV" min="1" value="25" onkeyup="stats()" onchange="stats()"></td>
+				</tr>
+				<tr>
+					<th>Square size:</th>
+					<td><input type="number" id="size" min="1" value="5" onkeyup="stats()" onchange="stats()"> pixels</td>
+				</tr>
+				<tr>
+					<th>Colours:</th>
+					<td>
+						<select id="colours">
+							<option value="monochrome">Monochrome</option>
+							<option value="greyscale">Greyscale</option>
+							<option disabled>――――――</option>
+							<option value="rgb_3bit">RGB 3-Bit</option>
+							<option value="rgb_6bit" selected>RGB 6-Bit</option>
+							<option value="rgb_12bit">RGB 12-Bit (Websafe)</option>
+							<option value="rgb_24bit">RGB 24-Bit (Truecolour)</option>
+							<option disabled>――――――</option>
+							<option value="red">Red</option>
+							<option value="green">Green</option>
+							<option value="blue">Blue</option>
+							<!--
+							<option disabled>――――――</option>
+							<option value="space_greyscale">Space (Greyscale)</option>
+							<option value="space_all">Space (All Colours)</option>
+							-->
+					</select>
+					</td>
+				</tr>
+				<tr>
+					<th>Bias:</th>
+					<td>
+						<select id="bias">
+							<option value="verylight">Very Light</option>
+							<option value="light">Light</option>
+							<option value="none" selected>None</option>
+							<option value="dark">Dark</option>
+							<option value="verydark">Very Dark</option>
+						</select>
+					</td>
+				</tr>
+			</table>
+
 		</p>
 		<p>
 			<span id="warning" style="display:none;">Warning: this is massive and may freeze/crash your browser!<br></span>
@@ -77,7 +90,7 @@
 		<canvas id="noisy"></canvas>
 		<img id="output" alt="White Noise" src="blank.png">
 		<p>
-			<a href="https://github.com/Robson/White-Noise-Image-Generator">Code</a> by <a href="https://robson.plus">Robson</a>.
+			<a href="https://github.com/Robson/White-Noise-Image-Generator">Code</a> by <a href="https://robson.plus">Robson</a>
 		</p>
 		<script src="page.js"></script>
 	</body>
